[package]
name = "hdwallet_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip0039 = { version = "0.10.1", features = ["czech", "french", "italian", "japanese", "korean", "portuguese", "spanish", "chinese-simplified", "chinese-traditional"]}
lazy_static = "1.4.0"
ring = "0.16.20"
secp256k1 = "0.22.1"

