[package]
name = "hdwallet_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip0039 = { version = "0.10.1", features = ["czech", "french", "italian", "japanese", "korean", "portuguese", "spanish", "chinese-simplified", "chinese-traditional"]}
curve25519-dalek = "3.2.1"
ed25519-dalek = "1.0.1"
ring = "0.16"
tikv-jemallocator = "0.4.0"
base58 = "0.1"
hex = "0.4"
ripemd160 = "0.8"